# cli-pomodoro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: usage.md
examples/basic/: demo.py  example.py
src/cli_pomodoro/: __init__.py  banner.py  cli.py  color.py  mosaic.py  palettes.py
tests/: test_banner.py  test_color.py  test_mosaic.py
